[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ithacaxyz/reth-stateless"
repository = "https://github.com/ithacaxyz/reth-stateless"
exclude = [".github/"]

[workspace]
members = [
    "bin/adapter",
    "bin/ress",
    "bin/reth",

    "crates/engine",
    "crates/evm",
    "crates/network",
    "crates/primitives",
    "crates/provider",

    "crates/testing",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# ress
ress-engine = { path = "crates/engine" }
ress-network = { path = "crates/network" }
ress-provider = { path = "crates/provider" }
ress-evm = { path = "crates/evm" }
ress-primitives = { path = "crates/primitives" }
ress-testing = { path = "crates/testing" }

# reth ress
reth-ress-protocol = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## primitives/types
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## db
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", features = [
    "test-utils",
] }

## network
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## trie
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-trie-sparse = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## evm
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## consensus
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-consensus-debug-client = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## rpc
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## node
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12", features = [
    "test-utils",
] }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

## util
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.12" }

# alloy
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-trie = { version = "0.8.1", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }

alloy-eips = { version = "0.15.5", default-features = false }
alloy-rpc-types = { version = "0.15.5", default-features = false }
alloy-rpc-types-eth = { version = "0.15.5", default-features = false }
alloy-rpc-types-engine = { version = "0.15.5", default-features = false }
alloy-rpc-types-debug = { version = "0.15.5", default-features = false }
alloy-rpc-client = { version = "0.15.5", default-features = false }
alloy-provider = { version = "0.15.5", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-transport-http = { version = "0.15.5", default-features = false }
alloy-serde = { version = "0.15.5", default-features = false }
alloy-consensus = { version = "0.15.5", default-features = false }
alloy-network = { version = "0.15.5", default-features = false }

# misc
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.39", default-features = false }
tokio-stream = "0.1.11"
futures = "0.3"
eyre = "0.6"
rand = "0.8.5"
tracing = "0.1.0"
tracing-subscriber = "0.3"
thiserror = "2.0.9"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
parking_lot = "0.12"
serde_json = "1.0.1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
dotenvy = "0.15.7"
itertools = "0.14"
metrics = "0.24.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
strum = "0.27"
strum_macros = "0.27"
schnellru = "0.2"

# testing
arbitrary = "1.3"
proptest = "1.4"
proptest-derive = "0.5"
proptest-arbitrary-interop = "0.1.0"
assert_matches = "1.5.0"

[patch."https://github.com/paradigmxyz/reth"]
# --- reth crates (kevaundray fork branch is kw/ress-modifications) -------------------------------

reth = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-ress-protocol = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# primitives / types
reth-primitives = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-primitives-traits = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-ethereum-primitives = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-chainspec = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-storage-errors = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-errors = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# database
reth-db = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-db-api = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-storage-api = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-provider = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# network
reth-eth-wire = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-network-api = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-network = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-network-peers = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-discv4 = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# trie
reth-trie = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-trie-sparse = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# EVM
reth-revm = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-evm = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-evm-ethereum = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# consensus / engine
reth-consensus = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-consensus-debug-client = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-engine-primitives = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-ethereum-engine-primitives = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-engine-tree = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-chain-state = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# RPC
reth-rpc-eth-types = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-rpc-api = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-rpc-engine-api = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-rpc-layer = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-rpc-types-compat = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-rpc-builder = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-rpc = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# node
reth-node-api = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-node-core = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-node-builder = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-node-ethereum = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-node-events = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-node-metrics = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# payload / txpool
reth-payload-builder = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-transaction-pool = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }

# utilities
reth-tokio-util = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-tracing = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-tasks = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-cli = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-cli-util = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-ethereum-cli = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-metrics = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
reth-testing-utils = { git = "https://github.com/kevaundray/reth", rev = "d4cfa4cc2913f783a9c245836d96590da3482fb6" }
