[package]
name = "ress-common"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ress-primitives.workspace = true

alloy-rpc-types.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-transport-http.workspace = true
reth-network.workspace = true
reth-transaction-pool.workspace = true
reth-primitives.workspace = true

eyre.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
