[package]
name = "ress-common"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# reth
reth-network.workspace = true
reth-transaction-pool.workspace = true
