[package]
name = "ress-network"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ress-subprotocol.workspace = true
ress-common.workspace = true

reth.workspace = true
reth-node-ethereum.workspace = true
reth-rpc-engine-api.workspace = true
alloy-rpc-types-eth.workspace = true
reth-tokio-util.workspace = true
reth-payload-builder.workspace = true
reth-provider.workspace = true

tokio.workspace = true
tracing.workspace = true
