[package]
name = "ress-node"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ress-common.workspace = true
ress-network.workspace = true
ress-subprotocol.workspace = true
ress-vm.workspace = true
ress-storage.workspace = true

reth.workspace = true
reth-node-ethereum.workspace = true
alloy-primitives.workspace = true

tokio.workspace = true
tracing.workspace = true
