[package]
name = "ress-node"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# ress
ress-common.workspace = true
ress-subprotocol.workspace = true
ress-network.workspace = true
ress-vm.workspace = true
ress-storage.workspace = true

# reth
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-engine-primitives.workspace = true
reth-consensus.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-rpc-builder.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true

# misc
tokio.workspace = true
tracing.workspace = true
