[package]
name = "stateless"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ress-subprotocol.workspace = true


alloy-primitives.workspace = true
alloy-eips.workspace = true
reth.workspace = true
reth-provider.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-node-ethereum.workspace = true
reth-rpc-engine-api.workspace = true
reth-payload-builder.workspace = true
reth-rpc-layer.workspace = true
reth-rpc-types-compat.workspace = true
reth-tracing.workspace = true
reth-consensus-debug-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
itertools.workspace = true


clap.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
serde_json = "1.0.133"
jsonrpsee-core.workspace = true
jsonrpsee-http-client.workspace = true
eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
futures.workspace = true
parking_lot.workspace = true
assert_matches.workspace = true
reth-tokio-util.workspace = true
