[package]
name = "ress-storage"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ress-network.workspace = true
ress-subprotocol.workspace = true

alloy-primitives.workspace = true
reth.workspace = true
thiserror.workspace = true
reth-trie.workspace = true
reth-trie-sparse.workspace = true
alloy-trie.workspace = true
tracing.workspace = true
tokio.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.3"
