[package]
name = "ress-vm"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
ress-storage.workspace = true

alloy-primitives.workspace = true
alloy-eips.workspace = true
reth-revm.workspace = true
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true

thiserror.workspace = true
eyre.workspace = true
